workspace-sf/force-app/main/default/objects/FaixaDevolucao__c/FaixaDevolucao__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as faixas de devolução dos parâmetros de vigência</description>
    <label>Faixa de devolução</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faixas de devolução</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>