workspace-sf/force-app/main/default/objects/FaixaDevolucao__c/fields/FaixaAte__c.field-meta.xml
<CustomField>
    <fullName>FaixaAte__c</fullName>
    <inlineHelpText>Valor em anos</inlineHelpText>
    <label>Faixa até</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>