workspace-sf/force-app/main/default/objects/FaixaDevolucao__c/fields/FaixaDe__c.field-meta.xml
<CustomField>
    <fullName>FaixaDe__c</fullName>
    <inlineHelpText>Valor em anos</inlineHelpText>
    <label>Faixa de</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>