workspace-sf/force-app/main/default/objects/FaixaDevolucao__c/fields/FaixaDevolucao__c.field-meta.xml
<CustomField>
    <fullName>FaixaDevolucao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faixa de devolução</label>
    <referenceTo>FaixaDevolucao__c</referenceTo>
    <relationshipLabel>Faixas de devolução</relationshipLabel>
    <relationshipName>FaixasDevolucao</relationshipName>
    <type>Lookup</type>
</CustomField>