workspace-sf/force-app/main/default/objects/FaixaDevolucao__c/fields/ParametroVigencia__c.field-meta.xml
<CustomField>
    <fullName>ParametroVigencia__c</fullName>
    <label>Parâmetro de vigência</label>
    <referenceTo>ParametroVigencia__c</referenceTo>
    <relationshipLabel>Faixas de devolução</relationshipLabel>
    <relationshipName>FaixasDevolucao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>