workspace-sf/force-app/main/default/objects/FaixaDevolucao__c/validationRules/ValidarPreenchimentoFaixa.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoFaixa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    AND(
       NOT(ISPICKVAL(ParametroVigencia__r.Tipo__c,&apos;Vitalício&apos;)), 
       NOT(ISPICKVAL(ParametroVigencia__r.ModeloResgate__c, &apos;Percentual do capital&apos;)) 
    )
)</errorConditionFormula>
    <errorMessage>As faixas somente deverão ser cadastradas para o tipo Vitalício e modelo de resgate Percentual do capital</errorMessage>
</ValidationRule>